Bug 32786 - [EasyHack] "Capitalise Every Word" function doesn't work properly in Calc
Summary: [EasyHack] "Capitalise Every Word" function doesn't work properly in Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 RC2
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard:
Keywords: easyHack
Depends on:
Blocks:
 
Reported: 2011-01-02 10:29 UTC by Saaz Rai
Modified: 2015-12-18 09:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saaz Rai 2011-01-02 10:29:13 UTC
"Capitalise Every Word" doesn't work properly in Calc/Spreadsheet.

Steps to reproduce this:

1. Type a sentence in a cell
2. Select the Cell
3. Format-->Change Case-->Capitalise Every Word
4. The words in the cell changes to Sentence Case instead.

Note: The rest of the Change Case functions as expected. Selecting the text in the cell and using the "Capitalise Every Word" function works properly.
Comment 1 Yifan Jiang 2011-01-04 02:21:58 UTC
Confirmed reproducible in 3.3 RC2.

Hi Kohei, would you like to review if this can be an easy hack.
Comment 2 Kohei Yoshida 2011-01-04 10:19:13 UTC
(In reply to comment #1)
> Confirmed reproducible in 3.3 RC2.
> 
> Hi Kohei, would you like to review if this can be an easy hack.

Sure, this can be an easy hack.  Apparently running this command when the cell is in edit mode and when it's not takes different code paths.  So, one has to investigate why one works and the other one doesn't.

FYI,

ScCellShell::ExecuteTrans()

gets called when the cell is *not* in edit mode, whereas

ScEditShell::ExecuteTrans()

gets called when the cell *is* in edit mode.  So, whoever is interested can start tracing the code from the above two methods and work his/her way down.

Yi Fan, can you mark this as Easy Hack?  Thanks!
Comment 3 Kohei Yoshida 2011-01-04 10:23:08 UTC
I guess we haven't set a rule for marking a bug an easy hack.  So, I'll just change the title.
Comment 4 vitriol 2011-02-07 07:14:31 UTC
Fixed in OOo:

http://www.openoffice.org/issues/show_bug.cgi?id=115128
Comment 5 Jonathan C 2011-05-17 16:53:48 UTC
Hi Guys. I need a little help. I am brand new to this and have set up my environment. I would like to become involved in the project and indeed would like to see can I fix this easy hack. I don't know how to get the task assigned to me though. 

I would love to help LibreOffice and am prepared to make code contributions for years to come. How do I let people know that I am gonna work on an easy hack. Ideally this one.
Comment 6 Norbert Thiebaud 2011-06-08 20:08:33 UTC
fixed on master with commit calc:2a38882c9cd7b04a942497fb018772df7b1c40a9
Comment 7 Robinson Tryon (qubit) 2015-12-18 09:57:40 UTC
Migrating Whiteboard tags to Keywords: (EasyHack)
[NinjaEdit]