Fix for fdo#32786: 'Capitalise Every Word' function

This fix is based on http://hg.services.openoffice.org/OOO340/rev/de0464b37fb3
Also replaced remaining tabs with spaces